[package]
name = "adsabs"
version = "0.1.0"
authors = ["Dan Foreman-Mackey <foreman.mackey@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/dfm/adsabs"
repository = "https://github.com/dfm/adsabs.git"
description = "A client for the SAO/NASA Astrophysics Data System API"
license = "Apache-2.0"
documentation = "https://docs.rs/adsabs"
categories = ["science", "api-bindings"]

[dependencies]
adsabs-macro = { version = "0.1.0", path = "macro" }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "4.0"
url = "2.2"

[workspace]
members = ["macro"]

[[example]]
name = "basic"
path = "examples/basic.rs"
