[package]
name = "adsabs"
version = "0.1.2"
authors = ["Dan Foreman-Mackey <foreman.mackey@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/dfm/adsabs-rs"
repository = "https://github.com/dfm/adsabs-rs.git"
description = "A Rust client for the SAO/NASA Astrophysics Data System API"
license = "Apache-2.0"
documentation = "https://docs.rs/adsabs"
categories = ["science", "api-bindings"]
exclude = [".github/*"]

[features]
default = ["blocking", "async"]
blocking = ["reqwest/blocking"]
async = ["futures-util", "async-stream"]

[dependencies]
adsabs-macro = { version = "0.1.1", path = "macro" }
thiserror = "1.0.30"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
chrono = { version = "0.4.19", features = ["serde"] }
dirs = "4.0.0"
url = "2.2.2"
futures-util = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }

[dev-dependencies]
html-escape = { version = "0.2.9" }

[workspace]
members = ["macro", "cli"]
