[package]
name = "adsabs"
version = "0.1.2"
authors = ["Dan Foreman-Mackey <foreman.mackey@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/dfm/adsabs-rs"
repository = "https://github.com/dfm/adsabs-rs.git"
description = "A Rust client for the SAO/NASA Astrophysics Data System API"
license = "Apache-2.0"
documentation = "https://docs.rs/adsabs"
categories = ["science", "api-bindings"]
exclude = [".github/*"]

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]
async = ["futures-util", "async-stream"]

[dependencies]
async-stream = { version = "0.3.2", optional = true }
chrono = { version = "0.4.19", features = ["serde"] }
dirs = "4.0.0"
discretionary = "0.1.0"
futures-util = { version = "0.3.19", optional = true }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.30"
url = "2.2.2"

[workspace]
members = ["cli"]
default-members = ["cli"]
