[package]
name = "adsabs-cli"
version = "0.1.2"
authors = ["Dan Foreman-Mackey <foreman.mackey@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/dfm/adsabs-rs"
repository = "https://github.com/dfm/adsabs-rs.git"
description = "A Rust client for the SAO/NASA Astrophysics Data System API"
license = "Apache-2.0"
documentation = "https://docs.rs/adsabs"
categories = ["science", "api-bindings"]

[dependencies]
adsabs = { version = "0.1.2", path = ".." }
clap = { version = "3.0.7", features = ["derive"] }
anyhow = "1.0.52"
serde_json = "1.0.74"
