[package]
name = "adsabs-macro"
version = "0.1.1"
authors = ["Dan Foreman-Mackey <foreman.mackey@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/dfm/adsabs-rs"
repository = "https://github.com/dfm/adsabs-rs.git"
description = "Implementation detail of adsabs crate"
license = "Apache-2.0"
documentation = "https://docs.rs/adsabs"
categories = ["science", "api-bindings"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
